changes in data

--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   "author": "Umesh Gaikwad",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.13.3",
-    "parcel": "^2.13.3",
-    "svgo": "^3.3.2"
+    "parcel": "^2.0.0-beta.1",
+    "sass": "^1.26.10"
   },
   "dependencies": {
-    "core-js": "^3.40.0",
+    "core-js": "^3.6.5",
     "fractional": "^1.0.0",
-    "regenerator-runtime": "^0.14.1"
+    "regenerator-runtime": "^0.13.7"
   }
 }
